@@ -1,4 +1,4 @@
-$Id: History,v 1.7 2000-12-07 12:14:06 maire Exp $
+$Id: History,v 1.8 2001-02-20 15:58:34 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -15,6 +15,10 @@ track of all tags.
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
      
+20-02-01  mma (testem2-V03-00-02)
+          - verbose stepping adapted for STL
+	  - save rndm at begin of event     
+	      
 07-12-00  mma (testem2-V02-00-03 & testem-noHist)
           remove hbook histograms: GNUmakefile,runAction
 				   
